force-app/main/default/objects/Registration_KZD__c/Registration_KZD__c.object-meta.xml
<CustomObject>
    <description>Created by: Kehali
Business Unit: Alphaforce Oaklnad
Purpose: Registrations KZD represent Christina&apos;s Preschool students who are enrolled in which class.</description>
    <label>Registration KZD</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Registration Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations KZD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>