force-app/main/default/objects/Registration_KZD__c/fields/Classes_KZD__c.field-meta.xml
<CustomField>
    <fullName>Classes_KZD__c</fullName>
    <label>Classes KZD</label>
    <referenceTo>Classes_KZD__c</referenceTo>
    <relationshipLabel>Registrations KZD</relationshipLabel>
    <relationshipName>Registrations_KZD</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>