force-app/main/default/objects/Registration_KZD__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>Created By: Kehali Demsash</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Student Date Of Birth</inlineHelpText>
    <label>Date Of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>