force-app/main/default/objects/Registration_KZD__c/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <description>Created By: Kehali Demsash</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Student Registration Date</inlineHelpText>
    <label>Date Registered</label>
    <required>true</required>
    <type>Date</type>
</CustomField>