force-app/main/default/objects/Registration_KZD__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Created By: Kehali Demsash</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Student Middle Name</inlineHelpText>
    <label>Middle Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>