force-app/main/default/objects/Registration_KZD__c/fields/Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_End_Date__c</fullName>
    <description>Created By: Kehali</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Registration End Date</inlineHelpText>
    <label>Registration End Date</label>
    <type>Date</type>
</CustomField>