force-app/main/default/objects/Registration_KZD__c/fields/Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Start_Date__c</fullName>
    <description>Created By: Kehali Demsash</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Registration Start Date</inlineHelpText>
    <label>Registration Start Date</label>
    <type>Date</type>
</CustomField>