force-app/main/default/objects/Registration_KZD__c/fields/Student_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Student_Emergency_Contact__c</fullName>
    <businessOwnerUser>ademsash@alphaworks.tech.chappren2</businessOwnerUser>
    <description>Created By: Kehali Demsash</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Student Emergency Contact</inlineHelpText>
    <label>Student Emergency Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>