force-app/main/default/objects/Registration_KZD__c/fields/Student_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Last_Name__c</fullName>
    <description>Created By: Kehali Demsash</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Student Last Name</inlineHelpText>
    <label>Student Last Name</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>